[gd_scene load_steps=4 format=3 uid="uid://we0l4hsa38l5"]

[ext_resource type="Script" path="res://Objects/InventoryItem.gd" id="1_82bva"]
[ext_resource type="Texture2D" uid="uid://s27d8ydt5m2i" path="res://Assets/tmp/cherry/cherry-1.png" id="2_dh8i5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_14f5c"]
radius = 22.4722

[node name="InventoryItem" type="Node2D" groups=["Items"]]
script = ExtResource("1_82bva")
item_texture = Object(GDScriptNativeClass,"script":null)


[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_14f5c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dh8i5")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
